--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
+beautifulsoup4==4.12.3
+html5lib==1.1
+lxml==5.2.2
+six==1.16.0
+soupsieve==2.5
 tomd==0.1.3
-beautifulsoup4==4.6.3
+webencodings==0.5.1
